Including reviews in book-course cards. Added animation when reviews are shown/hide, although depending on the item position it can jump to the next row. Fix pending

--- a/src/app/book-card/book-card.component.scss
+++ b/src/app/book-card/book-card.component.scss
@@ -1,5 +1,22 @@
 @import '~variables.scss';
 
+
+.card-reviews{
+    max-height: 620px;
+    overflow-y: scroll;
+    @media screen and (max-width: $break-card-row){
+        max-height: 360px;
+    }
+    @media screen and (min-width: $break-card-row) {
+        max-width: 380px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    @media screen and (max-width: $break-small - 1){
+        width: 349px;
+    } 
+}
+
 .content{
     margin-bottom:38px;
 }
