--- a/src/app/review/review.component.scss
+++ b/src/app/review/review.component.scss
@@ -2,9 +2,8 @@
 
 .review{
     display: flex;
-    max-width: 340px;
-    min-width: 300px;
-    padding: 39px 26px;
+    min-width: 280px;
+    padding: 39px 30px;
     
     flex-direction: column;
 
